# rapidschema

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  TODO  license.txt  readme.md
.ci/: setup-ssh.sh  travis_deploy_key.enc  uploadDocumentation.sh
cmake/: cpplint.cmake
examples/: CMakeLists.txt  objecttree.cpp  schema_generation.cpp  simple_error.cpp  simple_parse.cpp  simple_schema.cpp  simple_serialization.cpp
html/: annotated.html  annotated_dup.js  classes.html  classrapidschema_1_1AbstractWriter.html  classrapidschema_1_1AbstractWriter.js  classrapidschema_1_1AbstractWriter__inherit__graph.map  classrapidschema_1_1AbstractWriter__inherit__graph.md5  classrapidschema_1_1AdditionalProperties.html  classrapidschema_1_1AdditionalProperties.js  classrapidschema_1_1AdditionalProperties__coll__graph.md5  classrapidschema_1_1AdditionalProperties__inherit__graph.map  classrapidschema_1_1Array.html  classrapidschema_1_1Array.js  classrapidschema_1_1Array__coll__graph.md5  classrapidschema_1_1Array__inherit__graph.map  classrapidschema_1_1ExclusiveMaximum.html  classrapidschema_1_1ExclusiveMaximum.js  classrapidschema_1_1ExclusiveMinimum.html  classrapidschema_1_1ExclusiveMinimum.js  classrapidschema_1_1GenericConfig.html  classrapidschema_1_1GenericConfig.js  classrapidschema_1_1GenericConfig__inherit__graph.map  classrapidschema_1_1GenericConfig__inherit__graph.md5  classrapidschema_1_1GenericConstant.html  classrapidschema_1_1GenericConstant.js  classrapidschema_1_1GenericConstant__coll__graph.map  classrapidschema_1_1GenericConstant__coll__graph.md5  classrapidschema_1_1GenericConstant__inherit__graph.map  classrapidschema_1_1GenericConstant__inherit__graph.md5  classrapidschema_1_1GenericDefaultValue.html  classrapidschema_1_1GenericDefaultValue.js  classrapidschema_1_1GenericDefaultValue__coll__graph.map  classrapidschema_1_1GenericDefaultValue__coll__graph.md5  classrapidschema_1_1GenericDefaultValue__inherit__graph.map  classrapidschema_1_1GenericDefaultValue__inherit__graph.md5  classrapidschema_1_1GenericObject.html  classrapidschema_1_1GenericObject.js  classrapidschema_1_1GenericObject__coll__graph.map  classrapidschema_1_1GenericObject__coll__graph.md5  classrapidschema_1_1GenericValue.html  (+234 more)
html/search/: all_0.js  all_1.js  all_6.js  (+13 more)
include/: CMakeLists.txt  combined_constraint.h  config.h  confignode.h  configvalue.h  failure.h  failure_collection.h  int_constraints.h  json_type.h  json_type_set.h  meta_utils.h  multiple_of_constraint.h  ostream_operators.h  range_constraints.h  rapidjson_type_to_string.h  string_constraints.h  to_json_type.h  transform_result.h  transformresult.h  type_name.h  type_properties.h  type_set.h  utils.h  valueparser.h  variant.h
include/rapidschema/: abstract_handler.h  abstract_intput_stream.h  abstract_reader.h  abstract_writer.h  additional_properties.h  array.h  combined_constraint.h  config.h  confignode.h  configvalue.h  constant.h  default_value.h  failure.h  generic_input_stream.h  generic_reader.h  generic_writer.h  json_type_set.h  meta_utils.h  multiple_of_constraint.h  no_additional_properties.h  object.h  one_of.h  optional_config.h  ostream_operators.h  pattern_property.h  pattern_property_interface.h  pointer.h  range_constraints.h  rapidjson_type_to_string.h  result.h  string_constraints.h  transform_result.h  type_properties.h  utils.h  value.h  variant.h  writer_base.h
include/rapidschema/concepts/: constraint.h  correct_value_parameters.h  has_type_properties.h  requires_macro.h  unique_json_types.h  unique_types.h
include/rapidschema/meta/: json_type_set.h  meta_utils.h  tuple_utils.h  type_set.h  unique_tuple.h
include/rapidschema/modern_types/: optional.h  utility.h
include/rapidschema/sax/: abstract_handler.h  abstract_reader.h  generic_reader.h  object_handler.h  skip_handler.h  value_handler.h
include/rapidschema/schema/: boolean_schema.cpp  boolean_schema.h  boolean_schema_interface.h  constant_schema.cpp  constant_schema.h  constant_schema_impl.h  constant_schema_interface.h  integer_schema.cpp  integer_schema.h  integer_schema_interface.h  number_schema.cpp  number_schema.h  number_schema_interface.h  object_schema.cpp  object_schema.h  object_schema_interface.h  one_of_schema.cpp  one_of_schema.h  one_of_schema_interface.h  schema.h  schema_assembler.h  schema_assembler_interface.h  string_schema.cpp  string_schema.h  string_schema_interface.h  sub_schema.h  sub_schema_interface.h  type_schema.h
include/rapidschema/utils/: regex.h
tools/: Dockerfile  README  do-rm.sh  do-run.sh  do-shell.sh  do-start.sh  do-stop.sh
unittests/: CMakeLists.txt  combined_constraints_test.cpp  config_node_test.cpp  config_value_test.cpp  configurable_constraint_test.cpp  custom_value_type.cpp  custom_value_type_test.cpp  int32_config_value_test.cpp  int64_config_value_test.cpp  json_type_set_test.cpp  main.cpp  multiple_of_constraint_test.cpp  range_constraints_test.cpp  string_config_value_test.cpp  string_constraints_test.cpp  test.cpp  test_utils.h  to_json_literal.h  transform_result_matchers.h  transform_result_test.cpp  tuple_test.cpp  variant_test.cpp
unittests/rapidschema/: additional_properties_test.cpp  array_test.cpp  combined_constraints_test.cpp  config_node_test.cpp  constant_test.cpp  custom_type_value_test.cpp  custom_value_type_test.cpp  default_value_test.cpp  int32_config_value_test.cpp  int32_value_test.cpp  int64_config_value_test.cpp  int64_value_test.cpp  json_type_set_test.cpp  main.cpp  multiple_of_constraint_test.cpp  no_additional_properties_test.cpp  object_test.cpp  one_of_test.cpp  optional_config_test.cpp  pointer_test.cpp  range_constraints_test.cpp  result_test.cpp  string_config_value_test.cpp  string_constraints_test.cpp  string_value_test.cpp  test_utils.h  to_json_literal.h  transform_result_matchers.h  transform_result_test.cpp  tuple_test.cpp  variant_test.cpp
unittests/rapidschema/meta/: json_type_set_test.cpp  type_set_test.cpp
unittests/rapidschema/schema/: object_schema_test.cpp  schema_test.cpp
unittests/rapidschema/utils/: regex_test.cpp
(+8 files in other folders)
